--- a/styles/home.css
+++ b/styles/home.css
@@ -13,14 +13,16 @@ header {
 .bg {
     grid-area: left;
     background: url(/assets/home-bg-img.svg) no-repeat top/contain;
+    background-position-x: -10rem;
 }
 main {
     grid-area: right;
     display: flex;
     align-items: center;
+    margin-top: -12rem;
 }
 main .container {
-    width: min(36.3rem 100%);
+    width: min(36.3rem, 100%);
 }
 main h2 {
     font-family: 'Poppins', sans-serif;
@@ -35,37 +37,54 @@ input {
     height: 5rem;
     border-radius: 0.8rem;
 }
-button, .button {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
-    line-height: 0;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    background: var(--blue);
-    color: var(--white);
-
-    cursor: pointer;
-}
-button:hover, .button:hover {
-    filter: brightness(1.2);
-    transition: filter 1s;
-}
-
-button > img,
-.button > img {
-    margin-right: 1rem;
-    width: 2rem;
-}
-button.outlined,
-.button.outlined {
-    background: var(--white);
-    color: var(--blue);
-    border: 0.2rem solid var(--blue);
-}
 input, button, .button {
     width: 100%;
     margin-bottom: 1.8rem;
+}
+
+/* Separator Line */
+.separator {
+    display: flex;
+    align-items: center;
+    margin: 4rem 0;
+}
+.separator div:nth-child(1){
+    background: var(--grey-blue);
+    width: 100%;
+    height: 1px;
+}
+.separator div:nth-child(2){
+    color: var(--grey-blue);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    padding: 0 1.35rem;
+    line-height: none;
+}
+.separator div:nth-child(3){
+    background: var(--grey-blue);
+    width: 100%;
+    height: 1px;
+
+}
+
+/* create Balls  */
+
+.ball {
+    width: 21.2rem;
+    height: 21.2rem;
+    background: var(--blue);
+    position: fixed;
+    clip-path: circle();
+    opacity: 0.1;
+}
+.ball.top {
+    width: 63.3rem;
+    height: 63.3rem;
+    top: -38.5rem;
+    right: -40.4rem;
+}
+.ball.bottom {
+    bottom: -15rem;
+    right: 5.6rem;
 }
