--- a/htmls/styles/modal.css
+++ b/htmls/styles/modal.css
@@ -1,3 +1,7 @@
+.modal-wrapper.active {
+    visibility: visible;
+    opacity: 1;
+}
 .modal-wrapper {
     position: fixed;
     width: 100vw;
@@ -7,6 +11,9 @@
 
     background: var(--overlay);
     display: flex;
+
+    visibility: hidden;
+    opacity: 0;
 }
 .modal {
     width: min(59rem, 90%);
